* Correctness of HTML pages, now includes 'html' closing tag (#7784)
* JavaScript dependencies versus dev-dependencies (#8028)
* AR/AP items in vouchers can be saved only once (#6895)
* Accounts marked for reconciliation can't be deleted (#7805)
* Transactions and invoices with attachments can't be saved (#6018)
* Aging statement shows functional instead of foreign currency amounts (#2162)

Cleanup & architecture improvements
* Reference data factored out of database schema (#7648)
* Removed global state LedgerSMB::App_State::User (#7876)
* Improved state tracking using workflows (#7908, #8136, #8154)
* Move PostgreSQL SERIAL to GENERATED BY DEFAULT (#8047)
* Removed workaround class LedgerSMB::Mailer::TransportSMTP (#7932)

Updated dependencies
* Email::Sender (minimum increased to 2.601)
* Locale::CLDR (minimum increased to 0.44.1)
* Workflow (compatibility with 2.0)


Changelog for 1.11 Series
Released 2023-10-03

Changelog for 1.11.14
* Fix drill-down on trial balance to pass report selections (#8177)
* Fix read access on 'templates' table for printed documents (#8180)
* Fix error when clicking 'Attach' button on e-mail screen (#8193)


Changelog for 1.11.13
* Compatibility with Workflow 2.0 [to be released] (#8138)
* Fix recurring items re-using state of the original item (#8157)
* Fix download links at the bottom of the tax form report (#8164)


Changelog for 1.11.12
* Fix download of attachments to reconciliations (#8088)
* Fix e-mailing of AR aging statements (#8111)


Changelog for 1.11.11
* Fix 'not set up for hierarchy reporting' on Entity Account screen (#8065)
* Fix date format presentation misalignment with placeholder (#7983)
* Fix order of comparison periods in PNL and B/S (#7800)
* Fix handling of discounts in invoice API (#8030)
* Restore Hebrew 'nplurals' setting back to 4
* Enable scroll bars on setup(upgrade) data fix screens (#8071)


Changelog for 1.11.10
* Fix upgrades from older Pg versions with the 'cash_impact' view (#7987)